--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -1,2 +1,11 @@
-<h1>Angular</h1>
-<courses></courses> <authors></authors>
+<!-- <h1>Angular</h1>
+<courses></courses> -->
+<!-- <authors></authors> -->
+
+<favorite></favorite> <br />
+
+<input type="text" [(ngModel)]="title" />
+
+<br />
+
+{{ title | titleCase }}
